fit_predictor/mkp_aco/evaluates/run3/2025-01-16_21-58-24/problem_iter12_response17.txt_stdout.txt
Traceback (most recent call last):
  File "/home/lars/workspace/COP/reevo_2/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "/home/lars/workspace/COP/reevo_2/problems/mkp_aco/gpt.py", line 31
    avg_weight_factor = np.mean(weight, axis=1) / np.mean(np.mean(weight, axis=1)))
                                                                                  ^
SyntaxError: unmatched ')'
